# app/Http/Controllers/BankController.php
@@ -2,12 +2,14 @@
 
 namespace App\Http\Controllers;
 
-use Illuminate\Http\Request;
 
 use App\Bank;
 use App\User;
 use App\Group;
+use App\Receipt;
+use App\Transaction;
 use GuzzleHttp\Client;
+use Illuminate\Http\Request;
 use Illuminate\Support\Facades\DB;
 use Illuminate\Support\Facades\Auth;
 use App\Http\Controllers\HashController;
@@ -156,7 +158,7 @@ class BankController extends Controller
 
         Log::debug($request->all());
         try {
-            Group::create([
+            $groupId = Group::insertGetId([
                 'user_id' => User::find(Auth::user()->id)->id,
                 'subject' => $request->group_subject,
                 'alias_url' => $request->group_url,
@@ -168,6 +170,50 @@ class BankController extends Controller
                 'number' => $request->number,
                 'name' => $request->name,
             ]);
+
+            $transactions = array(
+                array('receipt' => true, 'id' => '1','group_id' => '1','title' => '신입생환영회 도시락 30인분','transaction_date' => '2019-01-19','handling' => '토마토(안산한양대)','balance' => '4049198','transaction_amount' => '120000','deposit_amount' => '0','created_at' => NULL,'updated_at' => '2019-06-29 11:56:16'),
+                array('id' => '2','group_id' => '1','title' => '신입생환영회 공책, 스테이플러,테이프','transaction_date' => '2019-01-25','handling' => '주식회사 아성','balance' => '4039198','transaction_amount' => '10000','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '3','group_id' => '1','title' => NULL,'transaction_date' => '2019-02-07','handling' => '카드할인캐쉬백','balance' => '4044424','transaction_amount' => '0','deposit_amount' => '5226','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '4','group_id' => '1','title' => '신입생 발송용 학과 소식지 인쇄','transaction_date' => '2019-02-13','handling' => '한양사','balance' => '4014674','transaction_amount' => '29750','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '5','group_id' => '15','title' => '신입생 발송용 A4 우편봉투','transaction_date' => '2019-02-13','handling' => '대학당','balance' => '4001674','transaction_amount' => '13000','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '6','group_id' => '29','title' => '우편 봉인용 풀 5개','transaction_date' => '2019-02-13','handling' => '씨유한양대셔틀콕','balance' => '3996674','transaction_amount' => '5000','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '7','group_id' => '1','title' => NULL,'transaction_date' => '2019-02-14','handling' => '카드할인캐쉬백','balance' => '4000454','transaction_amount' => '0','deposit_amount' => '3780','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '8','group_id' => '17','title' => '신입생 안내문 발송 (66명)','transaction_date' => '2019-02-15','handling' => '우정사업본부(한양대)','balance' => '3972734','transaction_amount' => '27720','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '9','group_id' => '29','title' => '신입생 OT 치킨마요 도시락 66개','transaction_date' => '2019-02-19','handling' => '한솥(한대점)','balance' => '3781334','transaction_amount' => '191400','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '10','group_id' => '1','title' => '학생회비 납부','transaction_date' => '2019-02-19','handling' => '이동훈','balance' => '3971334','transaction_amount' => '0','deposit_amount' => '190000','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '11','group_id' => '17','title' => '신입생 OT 학과 포스터 인쇄','transaction_date' => '2019-02-20','handling' => '한양사','balance' => '3966134','transaction_amount' => '52000','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '12','group_id' => '17','title' => '학생회비 납부','transaction_date' => '2019-02-20','handling' => '심규선','balance' => '4156134','transaction_amount' => '0','deposit_amount' => '190000','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '13','group_id' => '1','title' => '학생회비 납부','transaction_date' => '2019-02-20','handling' => '이찬영','balance' => '4346134','transaction_amount' => '0','deposit_amount' => '190000','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '14','group_id' => '1','title' => '학생회 비품 구입 (칼,자)','transaction_date' => '2019-02-20','handling' => '케이-슈퍼마켓','balance' => '4344734','transaction_amount' => '1400','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '15','group_id' => '28','title' => '앙 기모찌~~','transaction_date' => '2019-02-20','handling' => '학생회비 납부부','balance' => '4487234','transaction_amount' => '142500','deposit_amount' => '0','created_at' => NULL,'updated_at' => '2019-06-30 05:32:07'),
+                array('id' => '16','group_id' => '27','title' => '학생회비 납부','transaction_date' => '2019-02-21','handling' => '이세현','balance' => '4677234','transaction_amount' => '0','deposit_amount' => '190000','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '17','group_id' => '1','title' => '학생회비 납부','transaction_date' => '2019-02-21','handling' => '차세진','balance' => '4867234','transaction_amount' => '0','deposit_amount' => '190000','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '18','group_id' => '1','title' => '학생회비 납부','transaction_date' => '2019-02-21','handling' => '박태환','balance' => '5057234','transaction_amount' => '0','deposit_amount' => '190000','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '19','group_id' => '1','title' => '학생회비 납부','transaction_date' => '2019-02-21','handling' => '이예은','balance' => '5057234','transaction_amount' => '0','deposit_amount' => '190000','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '20','group_id' => '23','title' => '강은서','transaction_date' => '2019-02-21','handling' => '학생회비 납부','balance' => '5389734','transaction_amount' => '0','deposit_amount' => '190000','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '21','group_id' => '1','title' => '신입생OT퀴즈 상품','transaction_date' => '2019-02-21','handling' => '씨유한양대셔틀','balance' => '5372734','transaction_amount' => '17000','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL),
+                array('id' => '22','group_id' => '1','title' => '신입생 OT 도시락 추가 구매','transaction_date' => '2019-02-21','handling' => '한솥(한대점)','balance' => '5361134','transaction_amount' => '11600','deposit_amount' => '0','created_at' => NULL,'updated_at' => NULL)
+            );
+
+            foreach ($transactions as $transaction) {
+                $trans = Transaction::insertGetId([
+                    'group_id' => $groupId,
+                    'title' => $transaction['title'],
+                    'transaction_date' => $transaction['transaction_date'],
+                    'handling' => $transaction['handling'],
+                    'balance' => $transaction['balance'],
+                    'transaction_amount' => $transaction['transaction_amount'],
+                    'deposit_amount' => $transaction['deposit_amount'],
+                ]);
+
+                if (! empty($transaction['receipt'])) {
+                    Receipt::create([
+                        'transaction_id' => $trans,
+                        'payment_amount' => $transaction['deposit_amount'],
+                    ]);
+                }
+            }
 
             return response()->json([
                 'status' => 'success',
